--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "workbench.colorTheme": "Monokai",
+    "workbench.colorTheme": "Dark Theme - One Dark Pro",
     "python.analysis.typeCheckingMode": "off"
 }
